# bazel-toolchain-version-select

./: BUILD.bazel  README.md  WORKSPACE
rules_example/: BUILD.bazel  defs.bzl
rules_example/version/: BUILD.bazel
