load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "version",
    build_setting_default = "2",
    values = [
        "1",
        "2",
    ],
)

config_setting(
    name = "1",
    flag_values = {
        ":version": "1",
    },
)

config_setting(
    name = "2",
    flag_values = {
        ":version": "2",
    },
)
